--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -1121,6 +1121,14 @@
    "source": [
     "numerical_eda(df,col='RoamMins',target='Churn')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbad5d8e",
+   "metadata": {},
+   "source": [
+    "“I am not comparing overage fee with roaming minutes directly. Instead, I am evaluating each feature independently against the churn variable. For both overage fee and roaming minutes, the distributions for churned and non-churned customers are highly overlapping, with similar medians, comparable spreads, and no strong skewness differences. The mean values also show only minor variation. As a result, these features do not provide strong univariate signals for churn prediction. In contrast, renewal-related features show clear separation between churned and non-churned customers, indicating much higher predictive importance.”"
+   ]
   }
  ],
  "metadata": {
